--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
     "node-fetch": "^3.3.2",
-    "openai": "^4.48.3"
+    "openai": "^4.48.3",
+    "react-router-dom": "^6.24.0"
   }
 }
